try to tell eclipse to use JDK1.8.

--- a/springboot-test/build.gradle
+++ b/springboot-test/build.gradle
@@ -24,6 +24,12 @@ repositories {
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+eclipse {
+    jdt {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
+}
 
 dependencies {
     // tag::jetty[]
