--- a/springboot-test/build.gradle
+++ b/springboot-test/build.gradle
@@ -30,6 +30,10 @@ eclipse {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+    classpath {
+        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+    }
 }
 
 dependencies {
