--- a/springboot-test/build.gradle
+++ b/springboot-test/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'jacoco'
 
 jar {
@@ -29,10 +29,6 @@ eclipse {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
-    classpath {
-        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-    }
 }
 
 dependencies {
@@ -44,7 +40,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("com.h2database:h2:1.4.190")
 	
-    testCompile("junit:junit")
+    testCompile("org.testng:testng:6.11")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
