Introduce a new project for spring-boot admin
- Introduce a new project for spring-boot admin.
- Refactor springboot-gradle-study to a nested project structure.

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -11,4 +11,8 @@ pluginManagement {
 		}
 	}
 }
-rootProject.name = 'springboot-gradle-study'
+
+rootProject.name = 'spring-cloud-in-action'
+
+include "springboot-helloworld"
+include "springboot-admin"
