Migrate the repositories DSL to the parent project

--- a/spring-cloud-in-action/build.gradle
+++ b/spring-cloud-in-action/build.gradle
@@ -14,3 +14,12 @@ repositories {
 wrapper {
     gradleVersion = '5.4.1'
 }
+
+subprojects {
+    repositories {
+       mavenLocal()
+       mavenLocal()
+       mavenCentral()
+       maven { url 'https://repo.spring.io/milestone' }
+    }
+}
