Some minor changes

--- a/spring-cloud-in-action/springboot-admin/build.gradle
+++ b/spring-cloud-in-action/springboot-admin/build.gradle
@@ -11,8 +11,9 @@ sourceCompatibility = '1.8'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'de.codecentric:spring-boot-admin-starter-server:2.1.6'
+    implementation 'de.codecentric:spring-boot-admin-server-ui:2.1.6'
     
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
