--- a/spring-cloud-in-action/springboot-helloworld/build.gradle
+++ b/spring-cloud-in-action/springboot-helloworld/build.gradle
@@ -11,8 +11,8 @@ sourceCompatibility = '1.8'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    
+    implementation 'de.codecentric:spring-boot-admin-starter-client:2.1.6'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         exclude group: 'junit', module: 'junit'
