--- a/spring-cloud-in-action/springboot-helloworld/src/main/resources/application.properties
+++ b/spring-cloud-in-action/springboot-helloworld/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=9090
 
+spring.boot.admin.client.url=http://localhost:8090
+management.endpoints.web.exposure.include=*
+
 hello.msg=Hello World!
 random.port.num=${random.int[1024,9999]}
