--- a/spring-cloud-in-action/springboot-helloworld/build.gradle
+++ b/spring-cloud-in-action/springboot-helloworld/build.gradle
@@ -1,24 +1,22 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.0.M4'
+    id 'org.springframework.boot' version '2.1.6.RELEASE'
     id 'java'
+    id "io.spring.dependency-management" version "1.0.8.RELEASE"
 }
-
-apply plugin: 'io.spring.dependency-management'
 
 group = 'net.will'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'de.codecentric:spring-boot-admin-starter-client:2.1.6'
+    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+    implementation "de.codecentric:spring-boot-admin-starter-client:${springBootAdminVersion}"
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-        exclude group: 'junit', module: 'junit'
-    }
+    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
 
-test {
-    useJUnitPlatform()
+dependencyManagement {
+    imports {
+        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+    }
 }
