--- a/spring-cloud-in-action/build.gradle
+++ b/spring-cloud-in-action/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    }
+}
+
 plugins {
     id 'idea'
 }
@@ -16,10 +28,27 @@ wrapper {
 }
 
 subprojects {
+    apply plugin: "org.springframework.boot"
+    apply plugin: "io.spring.dependency-management"
+    apply plugin: "java"
+
+    group = "net.will"
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = '1.8'
+
     repositories {
-       mavenLocal()
        mavenLocal()
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+        }
+    }
+
+    dependencies {
+        testImplementation "org.springframework.boot:spring-boot-starter-test"
     }
 }
