Add projects for rabbit-mq study
- Add projects for rabbit-mq study.
- Upgrade the version of Spring Boot to 2.1.7.RELEASE.

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'spring-cloud-in-action'
 
 include "springboot-helloworld"
 include "springboot-admin"
+include "springboot-amqp:rabbit-mq-hello"
+include "springboot-amqp:rabbit-mq-direct"
