2 more test projects for RabbitMQ
- topic
- fanout

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -5,3 +5,7 @@ include "springboot-admin"
 include "springboot-amqp:rabbit-mq-hello"
 include "springboot-amqp:rabbit-mq-direct:log-handler-provider"
 include "springboot-amqp:rabbit-mq-direct:log-handler-consumer"
+include "springboot-amqp:rabbit-mq-topic:log-handler-provider"
+include "springboot-amqp:rabbit-mq-topic:log-handler-consumer"
+include "springboot-amqp:rabbit-mq-fanout:order-provider"
+include "springboot-amqp:rabbit-mq-fanout:order-consumer"
