A new project for Eureka HA

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -16,3 +16,4 @@ include "springboot-amqp:rabbit-mq-direct:log-handler-ack-provider"
 include "springboot-amqp:rabbit-mq-direct:log-handler-ack-consumer"
 
 include "eureka:eureka-server"
+include "eureka:eureka-server-ha"
