A provider service to register to eureka HA

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -17,3 +17,4 @@ include "springboot-amqp:rabbit-mq-direct:log-handler-ack-consumer"
 
 include "eureka:eureka-server"
 include "eureka:eureka-server-ha"
+include "eureka:eureka-provider"
