New tests for load balance with Ribbon

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -19,3 +19,4 @@ include "eureka:eureka-server"
 include "eureka:eureka-server-ha"
 include "eureka:eureka-provider"
 include "eureka:eureka-consumer"
+include "eureka:eureka-consumer-loadbalancer"
