--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -20,3 +20,4 @@ include "eureka:eureka-server-ha"
 include "eureka:eureka-provider"
 include "eureka:eureka-consumer"
 include "eureka:eureka-consumer-loadbalancer"
+include "eureka:eureka-consumer-no-eureka"
