--- a/spring-cloud-in-action/eureka/eureka-server-ha/src/main/resources/application-eureka2.yml
+++ b/spring-cloud-in-action/eureka/eureka-server-ha/src/main/resources/application-eureka2.yml
@@ -11,6 +11,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka1:8761/eureka/
-  server:
-    enableSelfPreservation: false
-    eviction-interval-timer-in-ms: 60000
+#  server:
+#    enableSelfPreservation: false
+#    eviction-interval-timer-in-ms: 60000
