--- a/spring-cloud-in-action/build.gradle
+++ b/spring-cloud-in-action/build.gradle
@@ -35,6 +35,7 @@ subprojects {
     group = "net.will"
     version = '0.0.1-SNAPSHOT'
     sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 
     repositories {
         mavenLocal()
