2 more projects for tests on improving the performance with Feign
- Feign with GZip.
- Feign with connection pool using HttpClient.

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -28,3 +28,5 @@ include "e-book:e-book-product:e-book-product-api"
 include "e-book:e-book-product:e-book-product-core"
 include "e-book:e-book-consumer:e-book-consumer-feign"
 include "e-book:e-book-consumer:e-book-consumer-feign-param"
+include "e-book:e-book-consumer:e-book-consumer-feign-gzip"
+include "e-book:e-book-consumer:e-book-consumer-feign-httpclient"
