Tests for Feign
- Feign logging (not succeed)
- Feign with Ribbon

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -30,3 +30,5 @@ include "e-book:e-book-consumer:e-book-consumer-feign"
 include "e-book:e-book-consumer:e-book-consumer-feign-param"
 include "e-book:e-book-consumer:e-book-consumer-feign-gzip"
 include "e-book:e-book-consumer:e-book-consumer-feign-httpclient"
+include "e-book:e-book-consumer:e-book-consumer-feign-log"
+include "e-book:e-book-consumer:e-book-consumer-feign-ribbon"
