A test project for Hystrix
- A test project for Hystrix.
- Use a single node Eureka server and make it be able to run locally.

--- a/spring-cloud-in-action/eureka/eureka-server/src/main/resources/application.yml
+++ b/spring-cloud-in-action/eureka/eureka-server/src/main/resources/application.yml
@@ -9,4 +9,6 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-
+  server:
+    enableSelfPreservation: false
+    eviction-interval-timer-in-ms: 30000
