A test project with Spring cache - Redis
Not tested yet. Need to set up a Redis server.

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -34,3 +34,4 @@ include "e-book:e-book-consumer:e-book-consumer-feign-log"
 include "e-book:e-book-consumer:e-book-consumer-feign-ribbon"
 
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-ribbon-fallback"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-ribbon-cache"
