Really test the previous project
And refactor the code a little to make it cleaner: eliminate a duplicate domain object.

--- a/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-ribbon-cache/src/main/resources/application.yml
+++ b/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-ribbon-cache/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     database: 1
     host: redis-server
     port: 6379
-    password: pwd
+    password: r8dis1234
     pool:
       max-active: 100
       max-wait: 3000
