--- a/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-ribbon-cache/build.gradle
+++ b/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-ribbon-cache/build.gradle
@@ -1,9 +1,15 @@
+plugins {
+    id 'java-library'
+}
+
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-data-redis"
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+
+    api project(':e-book:e-book-product:e-book-product-api')
 }
 
 dependencyManagement {
