A new project to test circuit breaker(tests not passed yet)

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -36,3 +36,4 @@ include "e-book:e-book-consumer:e-book-consumer-feign-ribbon"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-fallback"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-cache"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-batch"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-breaker"
