2 new projects test for Hystrix(execution isolation)

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -37,3 +37,5 @@ include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-fallback"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-cache"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-batch"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-breaker"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-threadpool"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-semaphore"
