A test project for Feign with fallback

--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -39,3 +39,4 @@ include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-batch"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-breaker"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-threadpool"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-semaphore"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-feign-fallback"
