--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -40,3 +40,4 @@ include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-breaker"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-threadpool"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-semaphore"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-feign-fallback"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-feign-factory"
