A new project test for Hystrix monitoring dashboard

--- a/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-dashboard/src/main/resources/application.yml
+++ b/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-dashboard/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: e-book-consumer-hystrix
+    name: e-book-hystrix-dashboard
 
 server:
-  port: 8086
+  port: 1001
 
 eureka:
   client:
