A new project test for Turbine(test not passed yet)

--- a/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-feign-fallback/src/main/resources/application.yml
+++ b/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-feign-fallback/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 spring:
   application:
-    name: e-book-consumer
+    name: e-book-consumer-hystrix-feign-fallback
 
 server:
   port: 8086
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 eureka:
   client:
