--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -42,3 +42,4 @@ include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-semaphore"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-feign-fallback"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-feign-factory"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-dashboard"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-turbine"
