The previous test of Turbine passed

--- a/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-turbine/src/main/resources/application.yml
+++ b/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-turbine/src/main/resources/application.yml
@@ -18,7 +18,7 @@ management:
 
 turbine:
   appConfig: e-book-consumer-hystrix-threadpool, e-book-consumer-hystrix-feign-fallback
-#  aggregator:
-#    clusterConfig: default
+  aggregator:
+    clusterConfig: default
 #    clusterConfig: E-BOOK-CONSUMER-HYSTRIX-THREADPOOL, E-BOOK-CONSUMER-HYSTRIX-FEIGN-FALLBACK
-#  clusterNameExpression: default
+  clusterNameExpression: "'default'"
