--- a/spring-cloud-in-action/build.gradle
+++ b/spring-cloud-in-action/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE"
+        classpath "io.spring.gradle:dependency-management-plugin:${springDependencyManagementVersion}"
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     }
 }
@@ -14,25 +14,10 @@ plugins {
     id 'idea'
 }
 
-group = 'net.will'
-version = '0.0.1-SNAPSHOT'
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-}
-
-wrapper {
-    gradleVersion = '5.6.2'
-}
-
-subprojects {
-    apply plugin: "org.springframework.boot"
-    apply plugin: "io.spring.dependency-management"
+allprojects {
     apply plugin: "java"
 
-    group = "net.will"
+    group = 'net.will'
     version = '0.0.1-SNAPSHOT'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
@@ -42,14 +27,26 @@ subprojects {
         mavenCentral()
         maven { url 'https://repo.spring.io/milestone' }
     }
+}
 
-    dependencyManagement {
-        imports {
-            mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+wrapper {
+    gradleVersion = '5.6.2'
+}
+
+subprojects {
+    // or if ( !(project.name in ['e-book-product-api']) ) {...}
+    if (project.name != 'e-book-product-api') {
+        apply plugin: "org.springframework.boot"
+        apply plugin: "io.spring.dependency-management"
+
+        dependencyManagement {
+            imports {
+                mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+            }
         }
-    }
 
-    dependencies {
-        testImplementation "org.springframework.boot:spring-boot-starter-test"
+        dependencies {
+            testImplementation "org.springframework.boot:spring-boot-starter-test"
+        }
     }
 }
