--- a/spring-cloud-in-action/e-book/e-book-product/e-book-product-api/build.gradle
+++ b/spring-cloud-in-action/e-book/e-book-product/e-book-product-api/build.gradle
@@ -1,9 +1,3 @@
 dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-web"
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-    }
+    implementation "org.springframework:spring-web:${springFrameworkVersion}"
 }
