--- a/spring-cloud-in-action/gradle.properties
+++ b/spring-cloud-in-action/gradle.properties
@@ -1,2 +1,6 @@
-springBootVersion=2.1.7.RELEASE
+springBootVersion=2.1.9.RELEASE
 springBootAdminVersion=2.1.5
+springDependencyManagementVersion=1.0.8.RELEASE
+
+# for some special projects that need only spring framework, like e-book-product-api
+springFrameworkVersion=5.1.10.RELEASE
