Test Turbine on cluster passed

--- a/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-feign-fallback/src/main/resources/application.yml
+++ b/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-feign-fallback/src/main/resources/application.yml
@@ -14,7 +14,8 @@ management:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+#      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: http://eureka1:8761/eureka/, http://eureka2:8761/eureka/
 
 feign:
   hystrix:
