New projects test for Turbine + RabbitMQ(test not passed yet)

--- a/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-threadpool-mq/build.gradle
+++ b/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-threadpool-mq/build.gradle
@@ -1,10 +1,19 @@
+plugins {
+    id 'java-library'
+}
+
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-turbine'
+
+//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-turbine-stream'
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
+
+    api project(':e-book:e-book-product:e-book-product-api')
 }
 
 dependencyManagement {
