--- a/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-turbine-mq/build.gradle
+++ b/spring-cloud-in-action/e-book/e-book-consumer-hystrix/e-book-consumer-hystrix-turbine-mq/build.gradle
@@ -5,6 +5,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-turbine'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-turbine-stream'
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
 }
 
 dependencyManagement {
