--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -43,3 +43,5 @@ include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-feign-fallback"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-feign-factory"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-dashboard"
 include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-turbine"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-threadpool-mq"
+include "e-book:e-book-consumer-hystrix:e-book-consumer-hystrix-turbine-mq"
