Change the credential of test RabbitMQ server

--- a/spring-cloud-in-action/springboot-amqp/rabbit-mq-direct/log-handler-ack-consumer/src/main/resources/application.yml
+++ b/spring-cloud-in-action/springboot-amqp/rabbit-mq-direct/log-handler-ack-consumer/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     host: 127.0.0.1
     port: 5672
     username: will
-    password: will1234
+    password: test1234
 
     listener:
       type: simple
