--- a/spring-cloud-in-action/springboot-amqp/rabbit-mq-hello/src/main/resources/application.properties
+++ b/spring-cloud-in-action/springboot-amqp/rabbit-mq-hello/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.port=9001
 spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=will
-spring.rabbitmq.password=will1234
+spring.rabbitmq.password=test1234
