Involve MySQL DB for e-book projects

--- a/spring-cloud-in-action/e-book/e-book-product/e-book-product-core/src/main/resources/application.yml
+++ b/spring-cloud-in-action/e-book/e-book-product/e-book-product-core/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
   application:
     name: e-book-provider
 
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: "jdbc:mysql://127.0.0.1:3306/book-product?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull"
+    username: will
+    password: test1234
+
 server:
   port: 8083
 
@@ -19,3 +25,7 @@ management:
     web:
       exposure:
         include: "*"
+
+mybatis:
+  type-aliases-package: net.will.ebook.product.domain
+  mapper-locations: "classpath:/mybatis/net/will/ebook/product/*.xml"
