--- a/spring-cloud-in-action/e-book/e-book-product/e-book-product-core/build.gradle
+++ b/spring-cloud-in-action/e-book/e-book-product/e-book-product-core/build.gradle
@@ -6,6 +6,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation "org.springframework.boot:spring-boot-starter-web"
 
+    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
+    implementation "mysql:mysql-connector-java:${mysqlVersion}"
+
     api project(':e-book:e-book-product:e-book-product-api')
 }
 
