--- a/spring-cloud-in-action/settings.gradle
+++ b/spring-cloud-in-action/settings.gradle
@@ -26,6 +26,9 @@ include "eureka:eureka-consumer-no-eureka"
 
 include "e-book:e-book-product:e-book-product-api"
 include "e-book:e-book-product:e-book-product-core"
+include "e-book:e-book-user:e-book-user-api"
+include "e-book:e-book-user:e-book-user-core"
+
 include "e-book:e-book-consumer:e-book-consumer-feign"
 include "e-book:e-book-consumer:e-book-consumer-feign-param"
 include "e-book:e-book-consumer:e-book-consumer-feign-gzip"
