--- a/spring-cloud-in-action/build.gradle
+++ b/spring-cloud-in-action/build.gradle
@@ -36,7 +36,9 @@ wrapper {
 subprojects {
     if ( !(project.name in [
             'e-book-product-api',
-            'e-book-user-api'
+            'e-book-user-api',
+            'e-book-order-api',
+            'e-book-trade-api'
     ]) ) {
         apply plugin: "org.springframework.boot"
         apply plugin: "io.spring.dependency-management"
