A test project for Zuul

--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -13,3 +13,5 @@ include "e-book:e-book-trade:e-book-trade-api"
 include "e-book:e-book-trade:e-book-trade-core"
 
 include 'e-book:e-book-consumer-order'
+
+include 'e-book:zuul:zuul-gateway'
