--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -15,3 +15,4 @@ include "e-book:e-book-trade:e-book-trade-core"
 include 'e-book:e-book-consumer-order'
 
 include 'e-book:zuul:zuul-gateway'
+include 'e-book:zuul:zuul-gateway-route'
