--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -16,3 +16,4 @@ include 'e-book:e-book-consumer-order'
 
 include 'e-book:zuul:zuul-gateway'
 include 'e-book:zuul:zuul-gateway-route'
+include 'e-book:zuul:zuul-gateway-filter'
