--- a/spring-cloud-in-action/sprintboot-2019/springboot-async/src/main/resources/application.yml
+++ b/spring-cloud-in-action/sprintboot-2019/springboot-async/src/main/resources/application.yml
@@ -1,12 +1,6 @@
 spring:
   application:
-    name: springboot-helloworld
-  boot:
-    admin:
-      client:
-        url: http://localhost:8090
-        instance:
-          service-base-url: http://localhost:8090
+    name: springboot-hello-async
 
 management:
   endpoints:
@@ -16,10 +10,6 @@ management:
   endpoint:
     health:
       show-details: ALWAYS
-
-hello:
-  msg: "Hello World!"
-
 
 server:
   port: 9090
