One more project that tests Zuul fallback and rate limit

--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -17,3 +17,4 @@ include 'e-book:e-book-consumer-order'
 include 'e-book:zuul:zuul-gateway'
 include 'e-book:zuul:zuul-gateway-route'
 include 'e-book:zuul:zuul-gateway-filter'
+include 'e-book:zuul:zuul-gateway-fallback'
