Test for timeout settings in Zuul

--- a/spring-cloud-in-action-s2/e-book/zuul/zuul-gateway/src/main/resources/application.yml
+++ b/spring-cloud-in-action-s2/e-book/zuul/zuul-gateway/src/main/resources/application.yml
@@ -16,3 +16,15 @@ eureka:
     serviceUrl:
 #      defaultZone: http://eureka1:8761/eureka/, http://eureka2:8761/eureka/
       defaultZone: http://127.0.0.1:8761/eureka/
+
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 8000
+
+ribbon:
+  ConnectTimeout: 5000
+  ReadTimeout: 5000
