--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -18,3 +18,5 @@ include 'e-book:zuul:zuul-gateway'
 include 'e-book:zuul:zuul-gateway-route'
 include 'e-book:zuul:zuul-gateway-filter'
 include 'e-book:zuul:zuul-gateway-fallback'
+
+include 'e-book:config:config-server'
