A new test project for spring cloud config client

--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -20,3 +20,4 @@ include 'e-book:zuul:zuul-gateway-filter'
 include 'e-book:zuul:zuul-gateway-fallback'
 
 include 'e-book:config:config-server'
+include 'e-book:config:config-client'
