--- a/spring-cloud-in-action-s2/build.gradle
+++ b/spring-cloud-in-action-s2/build.gradle
@@ -38,7 +38,8 @@ subprojects {
             'e-book-product-api',
             'e-book-user-api',
             'e-book-order-api',
-            'e-book-trade-api'
+            'e-book-trade-api',
+            'commons'
     ]) ) {
         apply plugin: "org.springframework.boot"
         apply plugin: "io.spring.dependency-management"
