--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -25,3 +25,5 @@ include 'e-book:config:config-server'
 include 'e-book:config:config-client'
 include 'e-book:config:config-server-encrypt-symmetric'
 include 'e-book:config:config-encrypt-symmetric-product-core'
+include 'e-book:config:config-server-encrypt-rsa'
+include 'e-book:config:config-encrypt-rsa-product-core'
