--- a/spring-cloud-in-action-s2/e-book/config/config-encrypt-rsa-product-core/src/main/resources/bootstrap.yml
+++ b/spring-cloud-in-action-s2/e-book/config/config-encrypt-rsa-product-core/src/main/resources/bootstrap.yml
@@ -7,6 +7,8 @@ spring:
       discovery:
         enabled: true
         serviceId: config-server
+      username: user
+      password: 123456
 
 server:
   port: 8083
