--- a/spring-cloud-in-action-s2/e-book/config/config-server-encrypt-rsa/build.gradle
+++ b/spring-cloud-in-action-s2/e-book/config/config-server-encrypt-rsa/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     implementation 'org.springframework.cloud:spring-cloud-config-server'
 }
