--- a/spring-cloud-in-action-s2/e-book/config/config-server-encrypt-rsa/src/main/resources/application.yml
+++ b/spring-cloud-in-action-s2/e-book/config/config-server-encrypt-rsa/src/main/resources/application.yml
@@ -9,6 +9,13 @@ spring:
 #          username: username
 #          password: password
 
+  security:
+    basic:
+      enabled: true
+    user:
+      name: user
+      password: 123456
+
 server:
   port: 8888
 
@@ -24,3 +31,4 @@ eureka:
 #      defaultZone: http://eureka1:8761/eureka/, http://eureka2:8761/eureka/
       defaultZone: http://127.0.0.1:8761/eureka/
 
+logging.level.org.springframework.boot.autoconfigure.security: INFO
