Re-construct the config files to sub-folders with application name

--- a/spring-cloud-in-action-s2/e-book/config/config-server-encrypt-rsa/src/main/resources/application.yml
+++ b/spring-cloud-in-action-s2/e-book/config/config-server-encrypt-rsa/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
     config:
       server:
         git:
-          uri: "https://github.com/pure-study/config"
+          uri: 'https://github.com/pure-study/config'
+          searchPaths: '{application}'
 #          username: username
 #          password: password
 
