A new test project for spring-cloud-bus
Test to refresh the configs from config-server.

--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -30,3 +30,4 @@ include 'e-book:config:config-encrypt-rsa-product-core'
 
 include 'e-book:config:config-client-bus'
 include 'e-book:config:config-client-bus2'
+include 'e-book:config:config-server-bus'
