Several test projects for stream basic and group

--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -31,3 +31,10 @@ include 'e-book:config:config-encrypt-rsa-product-core'
 include 'e-book:config:config-client-bus'
 include 'e-book:config:config-client-bus2'
 include 'e-book:config:config-server-bus'
+
+include 'e-book:stream:stream-sender'
+include 'e-book:stream:stream-receiver'
+include 'e-book:stream:stream-receiver2'
+include 'e-book:stream:stream-group-receiver'
+include 'e-book:stream:stream-group-receiver2'
+include 'e-book:stream:stream-group-sender'
