One test project for stream with partition

--- a/spring-cloud-in-action-s2/settings.gradle
+++ b/spring-cloud-in-action-s2/settings.gradle
@@ -38,3 +38,6 @@ include 'e-book:stream:stream-receiver2'
 include 'e-book:stream:stream-group-receiver'
 include 'e-book:stream:stream-group-receiver2'
 include 'e-book:stream:stream-group-sender'
+include 'e-book:stream:stream-partition-receiver'
+include 'e-book:stream:stream-partition-receiver2'
+include 'e-book:stream:stream-partition-sender'
