--- a/spring-cloud-in-action-s2/build.gradle
+++ b/spring-cloud-in-action-s2/build.gradle
@@ -16,6 +16,7 @@ plugins {
 
 allprojects {
     apply plugin: "java"
+	apply plugin: "eclipse"
 
     group = 'net.will'
     version = '0.0.1-SNAPSHOT'
