Some test projects for Sleuth

--- a/spring-cloud-in-action-s2/build.gradle
+++ b/spring-cloud-in-action-s2/build.gradle
@@ -40,6 +40,7 @@ subprojects {
             'e-book-user-api',
             'e-book-order-api',
             'e-book-trade-api',
+            'sleuth-product-api',
             'commons'
     ]) ) {
         apply plugin: "org.springframework.boot"
