Test projects for Sleuth working with ELK

--- a/spring-cloud-in-action-s2/build.gradle
+++ b/spring-cloud-in-action-s2/build.gradle
@@ -41,6 +41,7 @@ subprojects {
             'e-book-order-api',
             'e-book-trade-api',
             'sleuth-product-api',
+            'sleuth-elk-product-api',
             'commons'
     ]) ) {
         apply plugin: "org.springframework.boot"
