A group of test projects for Zipkin + RabbitMQ (tests not succeeded yet)

--- a/spring-cloud-in-action-s2/build.gradle
+++ b/spring-cloud-in-action-s2/build.gradle
@@ -43,6 +43,7 @@ subprojects {
             'sleuth-product-api',
             'sleuth-elk-product-api',
             'sleuth-zipkin-product-api',
+            'sleuth-zipkin-mq-product-api',
             'commons'
     ]) ) {
         apply plugin: "org.springframework.boot"
