--- a/spring-cloud-in-action-s2/e-book/sleuth/sleuth-zipkin-mq-provider/sleuth-zipkin-mq-product-core/build.gradle
+++ b/spring-cloud-in-action-s2/e-book/sleuth/sleuth-zipkin-mq-provider/sleuth-zipkin-mq-product-core/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation "mysql:mysql-connector-java:${mysqlVersion}"
     
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
     implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
 
     api project(':e-book:sleuth:sleuth-zipkin-mq-provider:sleuth-zipkin-mq-product-api')
