--- a/spring-cloud-in-action-s2/e-book/sleuth/sleuth-zipkin-mq-provider/sleuth-zipkin-mq-product-core/src/main/resources/application.yml
+++ b/spring-cloud-in-action-s2/e-book/sleuth/sleuth-zipkin-mq-provider/sleuth-zipkin-mq-product-core/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: sleuth-product
+    name: sleuth-zipkin-mq-product
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -14,6 +14,8 @@ spring:
     username: will
     password: test1234
   sleuth:    sampler:      probability: 1.0
+  zipkin:    sender:# If rabbit is on the classpath this is automatically set
+      type: rabbit
 
 server:
   port: 8083
