--- a/spring-cloud-docker-in-action/eureka/eureka-server-single/build.gradle
+++ b/spring-cloud-docker-in-action/eureka/eureka-server-single/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'com.bmuschko.docker-spring-boot-application' version '5.3.0'
+}
+
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 }
@@ -5,5 +9,13 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
+docker {
+    springBootApplication {
+        baseImage = 'java:8'
+        ports = [8761]
+        tag = "registry-will:5000/eureka-server-single:${project.version}"
     }
 }
