--- a/spring-cloud-docker-in-action/build.gradle
+++ b/spring-cloud-docker-in-action/build.gradle
@@ -16,7 +16,7 @@ plugins {
 
 allprojects {
     apply plugin: "java"
-	apply plugin: "eclipse"
+    apply plugin: "eclipse"
 
     group = 'net.will'
     version = '0.0.1-SNAPSHOT'
@@ -45,7 +45,7 @@ subprojects {
             'sleuth-zipkin-product-api',
             'sleuth-zipkin-mq-product-api',
             'commons'
-    ]) ) {
+    ]) && project.subprojects.size() == 0 ) {
         apply plugin: "org.springframework.boot"
         apply plugin: "io.spring.dependency-management"
 
