--- a/spring-cloud-docker-in-action/gradle.properties
+++ b/spring-cloud-docker-in-action/gradle.properties
@@ -1,8 +1,8 @@
-springBootVersion=2.1.9.RELEASE
-springBootAdminVersion=2.1.5
+springBootVersion=2.2.1.RELEASE
 springDependencyManagementVersion=1.0.8.RELEASE
+springCloudVersion=Hoxton.RC2
 
 mysqlVersion=8.0.17
 
 # for some special projects that need only spring framework, like e-book-product-api
-springFrameworkVersion=5.1.10.RELEASE
+springFrameworkVersion=5.2.1.RELEASE
