Fix the failed tests after previous upgrade of Spring

--- a/spring-cloud-docker-in-action/build.gradle
+++ b/spring-cloud-docker-in-action/build.gradle
@@ -28,6 +28,10 @@ allprojects {
         mavenCentral()
         maven { url 'https://repo.spring.io/milestone' }
     }
+
+    test {
+        useJUnitPlatform()
+    }
 }
 
 wrapper {
