--- a/spring-cloud-docker-in-action/e-book/e-book-product/e-book-product-core/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-product/e-book-product-core/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'com.bmuschko.docker-spring-boot-application' version '5.3.0'
 }
 
 dependencies {
@@ -17,3 +18,12 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
+
+docker {
+    springBootApplication {
+        baseImage = 'java:8'
+        ports = [8083]
+        tag = "registry-will:5000/e-book-product:${project.version}"
+    }
+}
+
